# ringts

./: .dockerignore  .env.example  .gitignore  DAILY-RESET.md  Dockerfile  FASTAPI-SUMMARY.md  MIGRATION-MULTIPROCESSING.md  README-DEPLOYMENT.md  README-FASTAPI.md  README.md  SQLITE-MIGRATION.md  advanced_analytics.py  alchemy.py  analytics.py  clean_duplicates.py  cleanup_database.py  conctests.ipynb  database_models.py  database_sqlalchemy.py  deploy.sh  docker-compose.yml  example_usage.py  fastapi_analytics.py  fastapi_app.py  fastapi_background.py  fastapi_database.py  fastapi_models.py  fastapi_scraper.py  fastapi_utils.py  fastapi_vip.py  flask_app.py  flask_app_backup.py  main.py  migrate_to_sqlite.py  pyproject.toml  rawget.ipynb  requirements-docker.txt  requirements-fastapi.txt  requirements.txt  rubinot.ipynb  (+5 more)
RINGTSV2/: COMPARISON.md  README.md  SUMMARY.md  __init__.py  analytics.py  data_processor.py  database.py  examples.py  main.py  parsers.py  requirements.txt  scraper.py  tibia_v2.db  wb.ipynb
data/: deltas.csv  exps.csv
static/: app.js  style.css
templates/: index.html  index_fast.html  makers_fast.html  vip.html  vip_fast.html
var/data/: deltas.csv
