[project]
name = "ringts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref>=3.11.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pebble>=5.1.3",
    "plotly>=6.5.0",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
